desktop design done without features types

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class="nav">
             <h3>G3 Architects</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
             </ul>
         </nav>
 
@@ -53,7 +53,7 @@
                 </div>
                 <div class="content-heading">
                     <div>
-                        <h3  class="content-title">
+                        <h3 class="content-title">
                             <span class="text-gray">Quick list</span> of Our <span class="text-primary">Features</span>
                         </h3>
                         <p class="content-description">
@@ -65,8 +65,114 @@
                     </div>
                 </div>
             </div>
+
+            <div class="types-of-feature">
+
+            </div>
+        </section>
+
+        <section class="achievement">
+            <div class="text-content">
+                <h3 class="achivement-title">
+                    Some Facts
+                </h3>
+                <p class="achievement-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.
+                </p>
+            </div>
+            <div class="achievement-items">
+                <div class="item">
+                    <div class="item-pic">
+                        <img src="./images/icons/ribon.png" alt="">
+                    </div>
+                    <div class="item-amnt">
+                        <h3>54</h3>
+                    </div>
+                    <div class="item-title">
+                        <p>Awards Winning</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-pic">
+                        <img src="./images/icons/projects.png" alt="">
+                    </div>
+
+                    <div class="item-amnt">
+                        <h3>1458</h3>
+                    </div>
+
+                    <div class="item-title">
+                        <p>Project FInishing</p>
+                    </div>
+
+                </div>
+                <div class="item">
+                    <div class="item-pic">
+                        <img src="./images/icons/customers.png" alt="">
+                    </div>
+
+
+                    <div class="item-amnt">
+                        <h3>590</h3>
+                    </div>
+
+
+                    <div class="item-title">
+                        <p>Client Worked</p>
+                    </div>
+
+                </div>
+                <div class="item">
+                    <div class="item-pic">
+                        <img src="./images/icons/email.png" alt="">
+                    </div>
+
+
+                    <div class="item-amnt">
+                        <h3>22578</h3>
+                    </div>
+
+                    <div class="item-title">
+                        <p>Email Send</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsors">
+            <div class="sponsors-heading">
+                <div>
+                    <h3 class="heading-title">
+                        Our Sponsors
+                    </h3>
+                </div>
+                <div>
+                    <p class="heading-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered
+                        alteration.
+                    </p>
+                </div>
+            </div>
+
+            <div class="sponsors-company">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/./sponsors/amazon.png" alt="">
+                <img src="./images/./sponsors/google.png" alt="">
+                <img src="./images/./sponsors/telerama.png" alt="">
+                <img src="./images/./sponsors/figma.png" alt="">
+            </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p class="footer-description">
+                All rights reserved copyright@2023 startup landing page design
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
