header section responsive done for mobile and medium devices

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="nav">
             <h3>G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="">Contact</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <section class="feature">
+        <section class="feature hide">
             <div class="features-content">
                 <div class="content-pic">
                     <img src="./images/team1.png" alt="">
@@ -71,7 +71,7 @@
             </div>
         </section>
 
-        <section class="achievement">
+        <section class="achievement hide">
             <div class="text-content">
                 <h3 class="achivement-title">
                     Some Facts
@@ -103,7 +103,7 @@
                     </div>
 
                     <div class="item-title">
-                        <p>Project FInishing</p>
+                        <p>Project Finishing</p>
                     </div>
 
                 </div>
@@ -141,7 +141,7 @@
             </div>
         </section>
 
-        <section class="sponsors">
+        <section class="sponsors hide">
             <div class="sponsors-heading">
                 <div>
                     <h3 class="heading-title">
@@ -166,7 +166,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer hide">
         <div class="footer-content">
             <p class="footer-description">
                 All rights reserved copyright@2023 startup landing page design
